mongoose/mongoose.h

#define free(a) vPortFree(a)
typedef unsigned __int64 uint64_t;
typedef unsigned char uint8_t;
typedef unsigned short uint16_t;
typedef enum { false = 0, true = 1 } bool;
#define connect(a, b, c) FreeRTOS_connect((a), (b), (c))
#define socket(a, b, c) FreeRTOS_socket((a), (b), (c))
#define send(a, b, c, d) FreeRTOS_send((a), (b), (c), (d))
#define recv(a, b, c, d) FreeRTOS_recv((a), (b), (c), (d))
struct mg_str {
  const char *ptr;  // Pointer to string data
  size_t len;       // String len
};
// Using macro to avoid shadowing C++ struct constructor, see #1298
#define mg_str(s) mg_str_s(s)
EXPORT struct mg_str mg_str(const char *s);
EXPORT size_t mg_vxprintf(void (*)(char, void *), void *, const char *fmt, va_list *);
EXPORT size_t mg_xprintf(void (*fn)(char, void *), void *, const char *fmt, ...);
// %M print helper functions
EXPORT size_t mg_print_base64(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_esc(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_hex(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip_port(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip4(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip6(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_mac(void (*out)(char, void *), void *arg, va_list *ap);
struct mg_timer {
  unsigned long id;         // Timer ID
  uint64_t period_ms;       // Timer period in milliseconds
  uint64_t expire;          // Expiration timestamp in milliseconds
  unsigned flags;           // Possible flags values below
#define MG_TIMER_ONCE 0     // Call function once
#define MG_TIMER_REPEAT 1   // Call function periodically
#define MG_TIMER_RUN_NOW 2  // Call immediately when timer is set
  void (*fn)(void *);       // Function to call
  void *arg;                // Function argument
  struct mg_timer *next;    // Linkage
};
EXPORT void mg_timer_init(struct mg_timer **head, struct mg_timer *timer,
                   uint64_t milliseconds, unsigned flags, void (*fn)(void *),
                   void *arg);
// Filesystem API functions
// st() returns MG_FS_* flags and populates file size and modification time
// ls() calls fn() for every directory entry, allowing to list a directory
//
// NOTE: UNIX-style shorthand names for the API functions are deliberately
// chosen to avoid conflicts with some libraries that make macros for e.g.
// stat(), write(), read() calls.
struct mg_fs {
  int (*st)(const char *path, size_t *size, time_t *mtime);  // stat file
  void (*ls)(const char *path, void (*fn)(const char *, void *), void *);
  void *(*op)(const char *path, int flags);             // Open file
  void (*cl)(void *fd);                                 // Close file
  size_t (*rd)(void *fd, void *buf, size_t len);        // Read file
  size_t (*wr)(void *fd, const void *buf, size_t len);  // Write file
  size_t (*sk)(void *fd, size_t offset);                // Set file position
  bool (*mv)(const char *from, const char *to);         // Rename file
  bool (*rm)(const char *path);                         // Delete file
  bool (*mkd)(const char *path);                        // Create directory
};
struct mg_addr;
struct mg_iobuf {
  unsigned char *buf;  // Pointer to stored data
  size_t size;         // Total size available
  size_t len;          // Current number of bytes
  size_t align;        // Alignment during allocation
};
struct mg_connection;
typedef void (*mg_event_handler_t)(struct mg_connection *, int ev,
                                   void *ev_data, void *fn_data);
struct mg_dns {
  const char *url;          // DNS server URL
  struct mg_connection *c;  // DNS server connection
};
struct mg_addr {
  uint8_t ip[16];  // Holds IPv4 or IPv6 address, in network byte order
  uint16_t port;   // TCP or UDP port in network byte order
  bool is_ip6;     // True when address is IPv6 address
};
struct mg_mgr {
  struct mg_connection *conns;  // List of active connections
  struct mg_dns dns4;           // DNS for IPv4
  struct mg_dns dns6;           // DNS for IPv6
  int dnstimeout;               // DNS resolve timeout in milliseconds
  bool use_dns6;                // Use DNS6 server by default, see #1532
  unsigned long nextid;         // Next connection ID
  unsigned long timerid;        // Next timer ID
  void *userdata;               // Arbitrary user data pointer
  void *tls_ctx;                // TLS context shared by all TLS sessions
  uint16_t mqtt_id;             // MQTT IDs for pub/sub
  void *active_dns_requests;    // DNS requests in progress
  struct mg_timer *timers;      // Active timers
  int epoll_fd;                 // Used when MG_EPOLL_ENABLE=1
  void *priv;                   // Used by the MIP stack
  size_t extraconnsize;         // Used by the MIP stack
#if MG_ENABLE_FREERTOS_TCP
  SocketSet_t ss;  // NOTE(lsm): referenced from socket struct
#endif
};
struct mg_connection {
  struct mg_connection *next;  // Linkage in struct mg_mgr :: connections
  struct mg_mgr *mgr;          // Our container
  struct mg_addr loc;          // Local address
  struct mg_addr rem;          // Remote address
  void *fd;                    // Connected socket, or LWIP data
  unsigned long id;            // Auto-incrementing unique connection ID
  struct mg_iobuf recv;        // Incoming data
  struct mg_iobuf send;        // Outgoing data
  mg_event_handler_t fn;       // User-specified event handler function
  void *fn_data;               // User-specified function parameter
  mg_event_handler_t pfn;      // Protocol-specific handler function
  void *pfn_data;              // Protocol-specific function parameter
  char data[MG_DATA_SIZE];     // Arbitrary connection data
  void *tls;                   // TLS specific data
  unsigned is_listening : 1;   // Listening connection
  unsigned is_client : 1;      // Outbound (client) connection
  unsigned is_accepted : 1;    // Accepted (server) connection
  unsigned is_resolving : 1;   // Non-blocking DNS resolution is in progress
  unsigned is_arplooking : 1;  // Non-blocking ARP resolution is in progress
  unsigned is_connecting : 1;  // Non-blocking connect is in progress
  unsigned is_tls : 1;         // TLS-enabled connection
  unsigned is_tls_hs : 1;      // TLS handshake is in progress
  unsigned is_udp : 1;         // UDP connection
  unsigned is_websocket : 1;   // WebSocket connection
  unsigned is_mqtt5 : 1;       // For MQTT connection, v5 indicator
  unsigned is_hexdumping : 1;  // Hexdump in/out traffic
  unsigned is_draining : 1;    // Send remaining data, then close and free
  unsigned is_closing : 1;     // Close and free the connection immediately
  unsigned is_full : 1;        // Stop reads, until cleared
  unsigned is_resp : 1;        // Response is still being generated
  unsigned is_readable : 1;    // Connection is ready to read
  unsigned is_writable : 1;    // Connection is ready to write
};
EXPORT void mg_mgr_poll(struct mg_mgr *, int ms);
EXPORT void mg_mgr_init(struct mg_mgr *);
EXPORT void mg_mgr_free(struct mg_mgr *);
EXPORT struct mg_connection *mg_listen(struct mg_mgr *, const char *url,
                                mg_event_handler_t fn, void *fn_data);
EXPORT struct mg_connection *mg_connect(struct mg_mgr *, const char *url,
                                 mg_event_handler_t fn, void *fn_data);
EXPORT struct mg_connection *mg_wrapfd(struct mg_mgr *mgr, int fd,
                                mg_event_handler_t fn, void *fn_data);
EXPORT void mg_connect_resolved(struct mg_connection *);
EXPORT bool mg_send(struct mg_connection *, const void *, size_t);
EXPORT size_t mg_printf(struct mg_connection *, const char *fmt, ...);
EXPORT size_t mg_vprintf(struct mg_connection *, const char *fmt, va_list *ap);
EXPORT bool mg_aton(struct mg_str str, struct mg_addr *addr);
// These functions are used to integrate with custom network stacks
EXPORT struct mg_connection *mg_alloc_conn(struct mg_mgr *);
EXPORT void mg_close_conn(struct mg_connection *c);
EXPORT bool mg_open_listener(struct mg_connection *c, const char *url);
// Utility functions
EXPORT struct mg_timer *mg_timer_add(struct mg_mgr *mgr, uint64_t milliseconds,
                              unsigned flags, void (*fn)(void *), void *arg);
// Low-level IO primives used by TLS layer
enum { MG_IO_ERR = -1, MG_IO_WAIT = -2, MG_IO_RESET = -3 };
EXPORT long mg_io_send(struct mg_connection *c, const void *buf, size_t len);
EXPORT long mg_io_recv(struct mg_connection *c, void *buf, size_t len);
struct mg_http_header {
  struct mg_str name;   // Header name
  struct mg_str value;  // Header value
};
struct mg_http_message {
  struct mg_str method, uri, query, proto;             // Request/response line
  struct mg_http_header headers[MG_MAX_HTTP_HEADERS];  // Headers
  struct mg_str body;                                  // Body
  struct mg_str head;                                  // Request + headers
  struct mg_str chunk;    // Chunk for chunked encoding,  or partial body
  struct mg_str message;  // Request + headers + body
};
// Parameter for mg_http_serve_dir()
struct mg_http_serve_opts {
  const char *root_dir;       // Web root directory, must be non-NULL
  const char *ssi_pattern;    // SSI file name pattern, e.g. #.shtml
  const char *extra_headers;  // Extra HTTP headers to add in responses
  const char *mime_types;     // Extra mime types, ext1=type1,ext2=type2,..
  const char *page404;        // Path to the 404 page, or NULL by default
  struct mg_fs *fs;           // Filesystem implementation. Use NULL for POSIX
};
// Parameter for mg_http_next_multipart
struct mg_http_part {
  struct mg_str name;      // Form field name
  struct mg_str filename;  // Filename for file uploads
  struct mg_str body;      // Part contents
};
EXPORT int mg_http_parse(const char *s, size_t len, struct mg_http_message *);
EXPORT int mg_http_get_request_len(const unsigned char *buf, size_t buf_len);
EXPORT void mg_http_printf_chunk(struct mg_connection *cnn, const char *fmt, ...);
EXPORT void mg_http_write_chunk(struct mg_connection *c, const char *buf, size_t len);
EXPORT struct mg_connection *mg_http_listen(struct mg_mgr *, const char *url,
                                     mg_event_handler_t fn, void *fn_data);
EXPORT struct mg_connection *mg_http_connect(struct mg_mgr *, const char *url,
                                      mg_event_handler_t fn, void *fn_data);
EXPORT void mg_http_serve_dir(struct mg_connection *, struct mg_http_message *hm,
                       const struct mg_http_serve_opts *);
EXPORT void mg_http_serve_file(struct mg_connection *, struct mg_http_message *hm,
                        const char *path, const struct mg_http_serve_opts *);
EXPORT void mg_http_reply(struct mg_connection *, int status_code, const char *headers,
                   const char *body_fmt, ...);
EXPORT struct mg_str *mg_http_get_header(struct mg_http_message *, const char *name);
EXPORT struct mg_str mg_http_var(struct mg_str buf, struct mg_str name);
EXPORT int mg_http_get_var(const struct mg_str *, const char *name, char *, size_t);
EXPORT int mg_url_decode(const char *s, size_t n, char *to, size_t to_len, int form);
EXPORT size_t mg_url_encode(const char *s, size_t n, char *buf, size_t len);
EXPORT void mg_http_creds(struct mg_http_message *, char *, size_t, char *, size_t);
EXPORT long mg_http_upload(struct mg_connection *c, struct mg_http_message *hm,
                    struct mg_fs *fs, const char *path, size_t max_size);
EXPORT void mg_http_bauth(struct mg_connection *, const char *user, const char *pass);
EXPORT struct mg_str mg_http_get_header_var(struct mg_str s, struct mg_str v);
EXPORT size_t mg_http_next_multipart(struct mg_str, size_t, struct mg_http_part *);
EXPORT int mg_http_status(const struct mg_http_message *hm);
EXPORT void mg_hello(const char *url);
EXPORT void mg_http_serve_ssi(struct mg_connection *c, const char *root,
                       const char *fullpath);
struct mg_tls_opts {
  const char *ca;         // CA certificate file. For both listeners and clients
  const char *crl;        // Certificate Revocation List. For clients
  const char *cert;       // Certificate
  const char *certkey;    // Certificate key
  const char *ciphers;    // Cipher list
  struct mg_str srvname;  // If not empty, enables server name verification
  struct mg_fs *fs;       // FS API for reading certificate files
};
EXPORT void mg_tls_init(struct mg_connection *, const struct mg_tls_opts *);
EXPORT void mg_tls_free(struct mg_connection *);
EXPORT long mg_tls_send(struct mg_connection *, const void *buf, size_t len);
EXPORT long mg_tls_recv(struct mg_connection *, void *buf, size_t len);
EXPORT size_t mg_tls_pending(struct mg_connection *);
EXPORT void mg_tls_handshake(struct mg_connection *);
// JSON-RPC request descriptor
struct mg_rpc_req {
  struct mg_rpc **head;  // RPC handlers list head
  struct mg_rpc *rpc;    // RPC handler being called
  mg_pfn_t pfn;          // Response printing function
  void *pfn_data;        // Response printing function data
  void *req_data;        // Arbitrary request data
  struct mg_str frame;   // Request, e.g. {"id":1,"method":"add","params":[1,2]}
};
// JSON-RPC method handler
struct mg_rpc {
  struct mg_rpc *next;              // Next in list
  struct mg_str method;             // Method pattern
  void (*fn)(struct mg_rpc_req *);  // Handler function
  void *fn_data;                    // Handler function argument
};
EXPORT void mg_rpc_add(struct mg_rpc **head, struct mg_str method_pattern,
                void (*handler)(struct mg_rpc_req *), void *handler_data);
EXPORT void mg_rpc_del(struct mg_rpc **head, void (*handler)(struct mg_rpc_req *));