module_windows.jai


mg_dns :: struct {
    url: *u8; // DNS server URL
    c:   *mg_connection; // DNS server connection
}

mg_addr :: struct {
    ip:       [16] u8; // Holds IPv4 or IPv6 address, in network byte order
    port:     u16; // TCP or UDP port in network byte order
    scope_id: u8; // IPv6 scope ID
    is_ip6:   bool; // True when address is IPv6 address
}

mg_mgr :: struct {
    conns:               *mg_connection; // List of active connections
    dns4:                mg_dns; // DNS for IPv4
    dns6:                mg_dns; // DNS for IPv6
    dnstimeout:          s32; // DNS resolve timeout in milliseconds
    use_dns6:            bool; // Use DNS6 server by default, see #1532
    nextid:              u32; // Next connection ID
    timerid:             u32; // Next timer ID
    userdata:            *void; // Arbitrary user data pointer
    tls_ctx:             *void; // TLS context shared by all TLS sessions
    mqtt_id:             u16; // MQTT IDs for pub/sub
    active_dns_requests: *void; // DNS requests in progress
    timers:              *mg_timer; // Active timers
    epoll_fd:            s32; // Used when MG_EPOLL_ENABLE=1
    priv:                *void; // Used by the MIP stack
    extraconnsize:       u64; // Used by the MIP stack
    pipe:                SOCKET; // Socketpair end for mg_wakeup()
}

mg_connection :: struct {
    next:          *mg_connection; // Linkage in struct mg_mgr :: connections
    mgr:           *mg_mgr; // Our container
    loc:           mg_addr; // Local address
    rem:           mg_addr; // Remote address
    fd:            *void; // Connected socket, or LWIP data
    id:            u32; // Auto-incrementing unique connection ID
    recv:          mg_iobuf; // Incoming data
    send:          mg_iobuf; // Outgoing data
    prof:          mg_iobuf; // Profile data enabled by MG_ENABLE_PROFILE
    rtls:          mg_iobuf; // TLS only. Incoming encrypted data
    fn:            mg_event_handler_t; // User-specified event handler function
    fn_data:       *void; // User-specified function parameter
    pfn:           mg_event_handler_t; // Protocol-specific handler function
    pfn_data:      *void; // Protocol-specific function parameter
    data:          [32] u8; // Arbitrary connection data
    tls:           *void; // TLS specific data
    is_listening:  u32; // Listening connection
    #place is_listening; /*bitfield 1*/ is_client:     u32; // Outbound (client) connection
    #place is_listening; /*bitfield 2*/ is_accepted:   u32; // Accepted (server) connection
    #place is_listening; /*bitfield 3*/ is_resolving:  u32; // Non-blocking DNS resolution is in progress
    #place is_listening; /*bitfield 4*/ is_arplooking: u32; // Non-blocking ARP resolution is in progress
    #place is_listening; /*bitfield 5*/ is_connecting: u32; // Non-blocking connect is in progress
    #place is_listening; /*bitfield 6*/ is_tls:        u32; // TLS-enabled connection
    #place is_listening; /*bitfield 7*/ is_tls_hs:     u32; // TLS handshake is in progress
    #place is_listening; /*bitfield 8*/ is_udp:        u32; // UDP connection
    #place is_listening; /*bitfield 9*/ is_websocket:  u32; // WebSocket connection
    #place is_listening; /*bitfield 10*/ is_mqtt5:      u32; // For MQTT connection, v5 indicator
    #place is_listening; /*bitfield 11*/ is_hexdumping: u32; // Hexdump in/out traffic
    #place is_listening; /*bitfield 12*/ is_draining:   u32; // Send remaining data, then close and free
    #place is_listening; /*bitfield 13*/ is_closing:    u32; // Close and free the connection immediately
    #place is_listening; /*bitfield 14*/ is_full:       u32; // Stop reads, until cleared
    #place is_listening; /*bitfield 15*/ is_resp:       u32; // Response is still being generated
    #place is_listening; /*bitfield 16*/ is_readable:   u32; // Connection is ready to read
    #place is_listening; /*bitfield 17*/ is_writable:   u32; // Connection is ready to write
    #place is_listening; /*bitfield 18*/ is_io_err:     u32; // Remember IO_ERR condition for later use
}

mg_mgr_poll :: (unknown0: *mg_mgr, ms: s32) -> void #foreign mongoose;

mg_mgr_init :: (unknown0: *mg_mgr) -> void #foreign mongoose;

mg_mgr_free :: (unknown0: *mg_mgr) -> void #foreign mongoose;

mg_listen :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_connect :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_wrapfd :: (mgr: *mg_mgr, fd: s32, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_connect_resolved :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_send :: (unknown0: *mg_connection, unknown1: *void, unknown2: u64) -> bool #foreign mongoose;

mg_printf_CFormat :: (unknown0: *mg_connection, fmt: *u8, __args: ..Any) -> u64 #foreign mongoose "mg_printf";
mg_printf :: (unknown0: *mg_connection, fmt: string, __args: ..Any) -> u64 {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_printf_CFormat(unknown0, "%s", formatted_text.data);
} @PrintLike

mg_vprintf :: (unknown0: *mg_connection, fmt: *u8, ap: *va_list) -> u64 #foreign mongoose;

mg_aton :: (str: mg_str, addr: *mg_addr) -> bool #foreign mongoose;

// These functions are used to integrate with custom network stacks
mg_alloc_conn :: (unknown0: *mg_mgr) -> *mg_connection #foreign mongoose;

mg_close_conn :: (c: *mg_connection) -> void #foreign mongoose;

mg_open_listener :: (c: *mg_connection, url: *u8) -> bool #foreign mongoose;

// Utility functions
mg_wakeup :: (unknown0: *mg_mgr, id: u32, buf: *void, len: u64) -> bool #foreign mongoose;

mg_wakeup_init :: (unknown0: *mg_mgr) -> bool #foreign mongoose;

mg_timer_add :: (mgr: *mg_mgr, milliseconds: u64, flags: u32, fn: #type (unknown0: *void) -> void #c_call, arg: *void) -> *mg_timer #foreign mongoose;

mg_http_header :: struct {
    name:  mg_str; // Header name
    value: mg_str; // Header value
}

mg_http_message :: struct {
    method:  mg_str; // Request/response line
    uri:     mg_str; // Request/response line
    query:   mg_str; // Request/response line
    proto:   mg_str; // Request/response line
    headers: [30] mg_http_header; // Headers
    body:    mg_str; // Body
    head:    mg_str; // Request + headers
    message: mg_str; // Request + headers + body
}

// Parameter for mg_http_serve_dir()
mg_http_serve_opts :: struct {
    root_dir:      *u8; // Web root directory, must be non-NULL
    ssi_pattern:   *u8; // SSI file name pattern, e.g. #.shtml
    extra_headers: *u8; // Extra HTTP headers to add in responses
    mime_types:    *u8; // Extra mime types, ext1=type1,ext2=type2,..
    page404:       *u8; // Path to the 404 page, or NULL by default
    fs:            *mg_fs; // Filesystem implementation. Use NULL for POSIX
}

// Parameter for mg_http_next_multipart
mg_http_part :: struct {
    name:     mg_str; // Form field name
    filename: mg_str; // Filename for file uploads
    body:     mg_str; // Part contents
}

mg_http_parse :: (s: *u8, len: u64, unknown0: *mg_http_message) -> s32 #foreign mongoose;

mg_http_get_request_len :: (buf: *u8, buf_len: u64) -> s32 #foreign mongoose;

mg_http_printf_chunk_CFormat :: (cnn: *mg_connection, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_http_printf_chunk";
mg_http_printf_chunk :: (cnn: *mg_connection, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_http_printf_chunk_CFormat(cnn, "%s", formatted_text.data);
} @PrintLike

mg_http_write_chunk :: (c: *mg_connection, buf: *u8, len: u64) -> void #foreign mongoose;

mg_http_listen :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_http_connect :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_http_serve_dir :: (unknown0: *mg_connection, hm: *mg_http_message, unknown1: *mg_http_serve_opts) -> void #foreign mongoose;

mg_http_serve_file :: (unknown0: *mg_connection, hm: *mg_http_message, path: *u8, unknown1: *mg_http_serve_opts) -> void #foreign mongoose;

// clang-format on
mg_http_reply_CFormat :: (unknown0: *mg_connection, status_code: s32, headers: *u8, body_fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_http_reply";
mg_http_reply :: (unknown0: *mg_connection, status_code: s32, headers: *u8, body_fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, body_fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_http_reply_CFormat(unknown0, status_code, headers, "%s", formatted_text.data);
} @PrintLike

mg_http_get_header :: (unknown0: *mg_http_message, name: *u8) -> *mg_str #foreign mongoose;

mg_http_var :: (buf: mg_str, name: mg_str) -> mg_str #foreign mongoose;

mg_http_get_var :: (unknown0: *mg_str, name: *u8, unknown1: *u8, unknown2: u64) -> s32 #foreign mongoose;

mg_url_decode :: (s: *u8, n: u64, to: *u8, to_len: u64, form: s32) -> s32 #foreign mongoose;

mg_url_encode :: (s: *u8, n: u64, buf: *u8, len: u64) -> u64 #foreign mongoose;

mg_http_creds :: (unknown0: *mg_http_message, unknown1: *u8, unknown2: u64, unknown3: *u8, unknown4: u64) -> void #foreign mongoose;

mg_http_upload :: (c: *mg_connection, hm: *mg_http_message, fs: *mg_fs, dir: *u8, max_size: u64) -> s32 #foreign mongoose;

mg_http_bauth :: (unknown0: *mg_connection, user: *u8, pass: *u8) -> void #foreign mongoose;

mg_http_get_header_var :: (s: mg_str, v: mg_str) -> mg_str #foreign mongoose;

// Multipart POST example:
// --xyz
// Content-Disposition: form-data; name="val"
//
// abcdef
// --xyz
// Content-Disposition: form-data; name="foo"; filename="a.txt"
// Content-Type: text/plain
//
// hello world
//
// --xyz--
mg_http_next_multipart :: (unknown0: mg_str, unknown1: u64, unknown2: *mg_http_part) -> u64 #foreign mongoose;

mg_http_status :: (hm: *mg_http_message) -> s32 #foreign mongoose;

mg_hello :: (url: *u8) -> void #foreign mongoose;

mg_http_serve_ssi :: (c: *mg_connection, root: *u8, fullpath: *u8) -> void #foreign mongoose;

mg_tls_opts :: struct {
    ca:                mg_str; // PEM or DER
    cert:              mg_str; // PEM or DER
    key:               mg_str; // PEM or DER
    name:              mg_str; // If not empty, enable host name verification
    skip_verification: s32; // Skip certificate and host name verification
}

mg_tls_init :: (unknown0: *mg_connection, opts: *mg_tls_opts) -> void #foreign mongoose;

mg_tls_free :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_tls_send :: (unknown0: *mg_connection, buf: *void, len: u64) -> s32 #foreign mongoose;

mg_tls_recv :: (unknown0: *mg_connection, buf: *void, len: u64) -> s32 #foreign mongoose;

mg_tls_pending :: (unknown0: *mg_connection) -> u64 #foreign mongoose;

mg_tls_handshake :: (unknown0: *mg_connection) -> void #foreign mongoose;

// Private
mg_tls_ctx_init :: (unknown0: *mg_mgr) -> void #foreign mongoose;

mg_tls_ctx_free :: (unknown0: *mg_mgr) -> void #foreign mongoose;

// Low-level IO primives used by TLS layer
MG_IO :: enum s32 {
    ERR   :: -1;
    WAIT  :: -2;
    RESET :: -3;
    MG_IO_ERR   :: ERR;
    MG_IO_WAIT  :: WAIT;
    MG_IO_RESET :: RESET;
}

mg_io_send :: (c: *mg_connection, buf: *void, len: u64) -> s32 #foreign mongoose;

mg_io_recv :: (c: *mg_connection, buf: *void, len: u64) -> s32 #foreign mongoose;
